# aspeditor

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README  aclocal.m4  aspnetedit.mds  configure.in  script.in
src/: Makefile.am
src/aspnetedit/: AssemblyInfo.cs.in  ChangeLog  Makefile.am  SampleHost.cs  aspnetedit.mdp
src/chrome/: ChangeLog  Makefile.am  README
src/chrome/content/: aspdesigner.js  aspdesigner.xul  editor.js  editor.xul  editorContent.css
src/chrome/skin/: aspdesigner.css
src/editor/: AssemblyInfo.cs.in  ChangeLog  Makefile.am  editor.mdp
src/editor/AspNetEdit.Editor.ComponentModel/: ChangeLog  DesignContainer.cs  DesignerHost.cs  Directive.cs  Document.cs  DocumentDirective.cs  EventBindingService.cs  MenuCommandService.cs  PageDirective.cs  RootDesigner.cs  SelectionService.cs  ToolboxService.cs  TypeResolutionService.cs  WebFormPage.cs  WebFormReferenceManager.cs
src/editor/AspNetEdit.Editor.Persistence/: ChangeLog  ControlPersister.cs  DesignTimeParser.cs  ParsingObject.cs  RootParsingObject.cs  ServerControlParsingObject.cs
src/editor/AspNetEdit.Editor.UI/: ChangeLog  PropertyGrid.cs  RootDesignerView.cs  Toolbox.cs  ToolboxItemBox.cs
src/editor/AspNetEdit.Gui.Toolbox/: CategoryToolboxNode.cs  ChangeLog  ItemToolboxNode.cs  Toolbox.cs  ToolboxItemToolboxNode.cs  ToolboxStore.cs
src/editor/System.Web.UI.Design/: ControlParser.cs  ControlPersister.cs  TODOAttribute.cs
src/jscall/: AssemblyInfo.cs.in  ChangeLog  Makefile.am  README  jscall.mdp
src/jscall/AspNetEdit.JSCall/: CommandManager.cs  InvalidJSArgumentException.cs
src/jscall/Resources/: JSCall.js
src/jscall/jscallglue/: Makefile.am  README  jscallglue.cpp
src/propertygrid/: AssemblyInfo.cs.in  Makefile.am  propertygrid.mdp
src/propertygrid/AspNetEdit.UI/: ChangeLog  EditorManager.cs  GridRow.cs  PropertyEditorTypeAttribute.cs  PropertyGrid.cs
src/propertygrid/AspNetEdit.UI.Editors/: BaseEditor.cs  ChangeLog  CollectionEditor.cs  StringEditor.cs
